--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -3,5 +3,8 @@
 <html lang="en" dir="ltr">
   <body>
     <h2>Hier soll die Hauptseite fuer die Kunden sein nach dem Login, hier soll ein Menu sein, wo die neue Bestellungen machen koennen, oder ich mache alles auf eine Seite, so dass hier schon die Funktion etc fuer Bestellungen ist</h2>
-  </body>
-</html>
+    <h1>Neue Bestellung</h1>
+    <form method="POST" class="order-form">
+        {% csrf_token %}
+        <button></button>
+    </form>
