--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -9,18 +9,62 @@
         <!-- import font awesome -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
               <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <meta name="viewport" charset="UTF-8" content="width=device-width, initial-scale=1.0"/>
     </head>
 
     <body>
         <div class=""navbar-fixed>
-
+            <nav class="blue">
+                <div class="container">
+                    <div class="nav-wrapper">
+                        <a href="{% url 'users-home' %}" class="brand-logo">MySocialProof</a>
+                        <a href="#" data-target="mobile-nav" class="sidenav-trigger">
+                            <i class="material-icons">menu</i>
+                        </a>
+                        <ul class="right hide-on-med-and-down">
+                            <li>
+                                <a href="{% url 'users-home' %}">Neue Bestllung</a>
+                            </li>
+                            <li>
+                                <a href="{% url 'orderhistory' %}">Bestellhistorie</a>
+                            </li>
+                            <li>
+                                <a href="{% url 'contact' %}">Kontakt</a>
+                            </li>
+                            <li>
+                                <a href="{% url 'about' %}">Über uns</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         </div>
+        <ul class="sidenav" id="mobile-nav">
+                            <li>
+                                <a href="{% url 'users-home' %}">Neue Bestllung</a>
+                            </li>
+                            <li>
+                                <a href="{% url 'orderhistory' %}">Bestellhistorie</a>
+                            </li>
+                            <li>
+                                <a href="{% url 'contact' %}">Kontakt</a>
+                            </li>
+                            <li>
+                                <a href="{% url 'about' %}">Über uns</a>
+                            </li>
+                        </ul>
 
         {% block content %}
         {% endblock %}
+
+        <!-- Section
     <!--JavaScript at end of body for optimized loading-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <script>
+            //Sidenav
+            const sideNav = document.querySelector('.sidenav');
+            M.Sidenav.init(sideNav, {});
+        </script>
     </body>
   </html>
 
