--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -1,6 +1,6 @@
   {% extends "users/base.html" %}
   {%  block content %}
-    <h2>Hier soll die Hauptseite fuer die Kunden sein nach dem Login, hier soll ein Menu sein, wo die neue Bestellungen machen koennen, oder ich mache alles auf eine Seite, so dass hier schon die Funktion etc fuer Bestellungen ist</h2>
+    <!--<h2>Hier soll die Hauptseite fuer die Kunden sein nach dem Login, hier soll ein Menu sein, wo die neue Bestellungen machen koennen, oder ich mache alles auf eine Seite, so dass hier schon die Funktion etc fuer Bestellungen ist</h2> -->
     <h1></h1>
         <div class="page-header">
             <a href="{% url 'users-home' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
