--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -1,70 +1,78 @@
+{% load static %}
+<!DOCTYPE html>
+<html>
+<head>
+  <!--Import Bootstrap4 Material -->
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'users/bootstrap-material-design.min.css' %}">
+    <!-- import Bootstrap4 Material Icons -->
+     <!-- Material Design for Bootstrap fonts and icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
+    <!-- import font awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'users/style.css' %}">
+          <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" charset="UTF-8" content="width=device-width, initial-scale=1.0"/>
+    <!-- Import Google Fonts Nunito-->
+    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+    <style>
+        body {
+              font-family: 'Nunito', sans-serif !important;
+        }
+    </style>
+</head>
+<body>
 
-  <!DOCTYPE html>
-  <html>
-    <head>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-        <!-- import font awesome -->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-              <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" charset="UTF-8" content="width=device-width, initial-scale=1.0"/>
-    </head>
-
-    <body>
-        <div class=""navbar-fixed>
-            <nav class="blue">
-                <div class="container">
-                    <div class="nav-wrapper">
-                        <a href="{% url 'users-home' %}" class="brand-logo">MySocialProof</a>
-                        <a href="#" data-target="mobile-nav" class="sidenav-trigger">
-                            <i class="material-icons">menu</i>
-                        </a>
-                        <ul class="right hide-on-med-and-down">
-                            <li>
-                                <a href="{% url 'users-home' %}">Neue Bestllung</a>
-                            </li>
-                            <li>
-                                <a href="{% url 'orderhistory' %}">Bestellhistorie</a>
-                            </li>
-                            <li>
-                                <a href="{% url 'contact' %}">Kontakt</a>
-                            </li>
-                            <li>
-                                <a href="{% url 'about' %}">Über uns</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
+    <!-- Navigation Header -->
+    <nav class="navbar navbar-expand-lg">
+        <a href="{% url 'users-home' %}" class="navbar-brand">
+            <img src="{% static 'users/instagramlogo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
+            My Social Proof
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ml-auto mr-5">
+                            <a class="nav-item nav-link active" href="{% url 'users-home' %}">Neue Bestllung <span class="sr-only">(current)</span></a>
+                            <a class="nav-item nav-link" href="{% url 'orderhistory' %}">Bestellhistorie</a>
+                            <a class="nav-item nav-link" href="{% url 'contact' %}">Kontakt</a>
+                            <a class="nav-item nav-link" href="{% url 'about' %}">Über uns</a>
+            </div>
         </div>
-        <ul class="sidenav" id="mobile-nav">
-                            <li>
-                                <a href="{% url 'users-home' %}">Neue Bestllung</a>
-                            </li>
-                            <li>
-                                <a href="{% url 'orderhistory' %}">Bestellhistorie</a>
-                            </li>
-                            <li>
-                                <a href="{% url 'contact' %}">Kontakt</a>
-                            </li>
-                            <li>
-                                <a href="{% url 'about' %}">Über uns</a>
-                            </li>
-                        </ul>
+    </nav>
+    <!-- Side Navigation with Menu -->
+  <!--  <ul class="sidenav" id="mobile-nav">
+                        <li>
+                            <a href="{% url 'users-home' %}">Neue Bestllung</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'orderhistory' %}">Bestellhistorie</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'contact' %}">Kontakt</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'about' %}">Über uns</a>
+                        </li>
+                    </ul>
+<div class="container"> -->
+<div class="container mt-3">
+    {% block content %}
+    {% endblock %}
+</div>
 
-        {% block content %}
-        {% endblock %}
-
-        <!-- Section
-    <!--JavaScript at end of body for optimized loading-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-        <script>
-            //Sidenav
-            const sideNav = document.querySelector('.sidenav');
-            M.Sidenav.init(sideNav, {});
-        </script>
-    </body>
-  </html>
+    <!-- Section
+<!--JavaScript at end of body for optimized loading-->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js" integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9" crossorigin="anonymous"></script>
+    <script>$(document).ready(function() { $('body').bootstrapMaterialDesign(); });</script>
+    <script>
+        //Sidenav
+        const sideNav = document.querySelector('.sidenav');
+        M.Sidenav.init(sideNav, {});
+    </script>
+</body>
+</html>
 
