commit 8, register form and added homepage(index.html), changed the navbar a bit and  added some general styling

--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -24,7 +24,7 @@
 <body>
 
     <!-- Navigation Header -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <a href="{% url 'users-home' %}" class="navbar-brand">
             <img src="{% static 'users/instagramlogo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
             My Social Proof
@@ -34,10 +34,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ml-auto mr-5">
-                            <a class="nav-item nav-link active" href="{% url 'users-home' %}">Neue Bestllung <span class="sr-only">(current)</span></a>
-                            <a class="nav-item nav-link" href="{% url 'orderhistory' %}">Bestellhistorie</a>
-                            <a class="nav-item nav-link" href="{% url 'contact' %}">Kontakt</a>
-                            <a class="nav-item nav-link" href="{% url 'about' %}">Über uns</a>
+                <a class="nav-item nav-link active" href="{% url 'users-home' %}">Neue Bestllung <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="{% url 'orderhistory' %}">Bestellhistorie</a>
+                <a class="nav-item nav-link" href="{% url 'contact' %}">Kontakt</a>
+                <a class="nav-item nav-link" href="{% url 'about' %}">Über uns</a>
+            </div>
+            <div class="navbar-nav ml-auto">
+                <a class="nav-item nav-link" href="{% url 'login' %}">Einloggen</a>
+                <a class="nav-item nav-link" href="{% url 'register' %}">Registrieren</a>
             </div>
         </div>
     </nav>
