--- a/users/static/users/style.css
+++ b/users/static/users/style.css
@@ -27,3 +27,11 @@
     font-weight: bold !important;
 }
 
+.content-section {
+  background: #ffffff !important;
+  padding: 10px 20px !important;
+  border: 1px solid #dddddd !important;
+  border-radius: 3px !important;
+  margin-bottom: 20px !important;
+}
+
