--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -25,7 +25,7 @@
 
     <!-- Navigation Header -->
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <a href="{% url 'users-home' %}" class="navbar-brand">
+        <a href="{% url 'index' %}" class="navbar-brand">
             <img src="{% static 'users/instagramlogo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
             My Social Proof
         </a>
@@ -34,7 +34,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ml-auto mr-5">
-                <a class="nav-item nav-link active" href="{% url 'users-home' %}">Neue Bestllung <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link active" href="{% url 'neworder' %}">Neue Bestllung <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="{% url 'orderhistory' %}">Bestellhistorie</a>
                 <a class="nav-item nav-link" href="{% url 'contact' %}">Kontakt</a>
                 <a class="nav-item nav-link" href="{% url 'about' %}">Über uns</a>
@@ -48,19 +48,27 @@
     <!-- Side Navigation with Menu -->
   <!--  <ul class="sidenav" id="mobile-nav">
                         <li>
-                            <a href="{% url 'users-home' %}">Neue Bestllung</a>
+                            <a href="#">Neue Bestllung</a>
                         </li>
                         <li>
-                            <a href="{% url 'orderhistory' %}">Bestellhistorie</a>
+                            <a href="#">Bestellhistorie</a>
                         </li>
                         <li>
-                            <a href="{% url 'contact' %}">Kontakt</a>
+                            <a href="#">Kontakt</a>
                         </li>
                         <li>
-                            <a href="{% url 'about' %}">Über uns</a>
+                            <a href="#">Über uns</a>
                         </li>
                     </ul>
 <div class="container"> -->
+
+{% if messages %}
+    {%  for message in messages %}
+        <div class="alert alert-{{ message.tags }}">
+        {{ message }}
+        </div>
+    {% endfor %}
+{% endif %}
 <div class="container mt-3">
     {% block content %}
     {% endblock %}
