--- a/users/templates/users/order.html
+++ b/users/templates/users/order.html
@@ -1,10 +1,11 @@
 {% extends "users/base.html" %}
+{% load crispy_forms_tags %}
 {%  block content %}
     <div class="content-section">
         <h2 class="border-bottom mb-4">Neue Bestellung</h2>
         <form method="POST">
             {% csrf_token %}
-            {{ form.as_p }}
+            {{ form|crispy }}
             <button type="submit" class="save btn btn-default">Bestellen</button>
         </form>
     </div>
