--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,4 +1,5 @@
 {% extends "users/base.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
         <form method="post">
@@ -7,7 +8,7 @@
                 <legend class="border-bottom mb-4">
                     Booste jetzt dein Instagram Profil
                 </legend>
-                {{ form.as_p }}
+                {{ form|crispy }}
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Registrieren</button>
