--- a/users/static/users/style.css
+++ b/users/static/users/style.css
@@ -35,3 +35,11 @@
   margin-bottom: 20px !important;
 }
 
+.css-serial {
+  counter-reset: serial-number;  /* Set the serial number counter to 0 */
+}
+
+.css-serial td:first-child:before {
+  counter-increment: serial-number;  /* Increment the serial number counter */
+  content: counter(serial-number);  /* Display the counter */
+}
